# pomodoro

./: .gitignore  Makefile  alembic.ini  database.py  dependency.py  docker-compose.yml  main.py  pomodoro.sqlite  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 09f7ccfaa754_username_nullable_for_google_ouath2.py  0ea4974626cf_username_nullable_for_google_ouath21.py  12863c0cc19e_yandex_access_token.py  1b66fd535849_jwt.py  1bcbee7b22f4_user_id_foreign_key_tasks.py  4c91f31ef992_username_nullable_for_google_ouath2_.py  6dc1484ceb14_init.py  740914cca1d6_migrate.py  862721296bb5_jwt_update.py  9436c5b2c7c6_yandex.py  9ce830be7636_username_nullable_for_google_ouath22.py  b543b8bfff61_init.py  be79af55cb4e_user_init.py  c1017395c0ff_extend_user_profile.py  e393886a618f_taskschema_update.py  fc649fc8c16d_model_update.py
app/: dependency.py  exception.py  main.py
app/broker/: accessor.py  consumer.py  producer.py
app/client/: __init__.py  google.py  yandex.py
app/handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/models/: user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/schema/: __init__.py  auth.py
app/service/: __init__.py  auth.py  task.py  user.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
cache/: accessor.py
client/: google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: settings.py
(+14 files in other folders)
