[tool.poetry]
name = "pomodoro-time"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
response = "^0.5.0"
requests = "^2.32.3"
httpx = "^0.28.1"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
pytest = "^8.3.4"
twisted = "^24.11.0"
pytest-twisted = "^1.14.3"
factory-boy = "^3.3.1"
pytest-factoryboy = "^2.7.0"
faker = "^33.3.1"
celery = "^5.4.0"
aio-pika = "^9.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
